se agrega endpoint de categorias y productos de categorias
